# Multi-agent-ai

./: README.md  api.py  main.py  pyproject.toml  requirements.txt
agents/: helper_agent.py  researcher_agent.py
app/: classifier_intent.py  graph.py  router.py  state.py  tools.py
