[project]
name = "agent-lograph-groq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.7",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
